Fix slightly too small width of slot time column

--- a/src/inPL/profile/public/schedule.css
+++ b/src/inPL/profile/public/schedule.css
@@ -226,13 +226,11 @@
 .sc_slot_time {
     opacity: 0.7;
     text-align: right;
-    width: 36px;
+    width: 40px;
     border: 0;
 }
 .sc_slot_used .sc_slot_time { cursor: grab; }
-.sc_slot_identity {
-    text-align: left;
-}
+.sc_slot_identity { text-align: left; }
 .sc_slot_warn.sc_slot_used {
     background: #ca3317;
     color: white;
